<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewOsszeg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"
    android:orientation="vertical"
    app:layout_anchorGravity="fill"
    app:layout_gravity="fill"
    tools:context=".TetelHozzaadas">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/cimsorBar"
        app:cardCornerRadius="15dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/cimsorText"
                app:cardCornerRadius="15dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView34"
                        style="@style/controlActionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/TetelHozzaadas"
                        android:textAllCaps="true"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        app:cardBackgroundColor="@color/mentesGomb"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:contentPadding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView38"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:text="@string/tetelhozad"
                                android:textAlignment="center"
                                android:textColor="@color/cimsorText"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/TetelNev"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/textViewRegNev2"
                        style="@style/controlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:paddingLeft="10dp"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/TetelOsszege"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/textViewRegNev"
                        style="@style/controlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:drawableStart="@drawable/money_pay"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:inputType="number"
                        android:paddingLeft="10dp"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/Datum"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textViewDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="2dp"
                        android:drawableStart="@drawable/pay_calendar"
                        android:drawablePadding="10dp"
                        android:hint="@string/Datum_valasztas"
                        android:padding="10dp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/tipus"
                        android:textAlignment="viewStart"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:layout_width="333dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioKiadas"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:gravity="center"
                            android:text="@string/Kiadas"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/radioBevetel"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="25dp"
                            android:gravity="center"
                            android:text="@string/Bevetel"
                            android:textSize="18sp" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        app:cardBackgroundColor="@color/cimsorBar"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:contentPadding="5dp">

                        <Button
                            android:id="@+id/ButtonHozzad"
                            style="@style/controlButtonView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/cimsorBar"
                            android:drawableLeft="@drawable/hozzaad"
                            android:drawablePadding="20dp"
                            android:paddingLeft="5dp"
                            android:text="@string/Hozzaadas"
                            android:textColor="@color/cimsorText"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>