<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Regisztracio">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/cimsorBar"
        app:cardCornerRadius="15dp"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/cimsorText"
                app:cardCornerRadius="15dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView34"
                        style="@style/controlActionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/regisztracio"
                        android:textAllCaps="true"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:typeface="normal" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        app:cardBackgroundColor="@color/mentesGomb"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp"
                        app:contentPadding="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView38"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:justificationMode="none"
                                android:padding="5dp"
                                android:text="@string/regisztral"
                                android:textAlignment="center"
                                android:textColor="@color/cimsorText"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <EditText
                        android:id="@+id/textViewRegNev"
                        style="@style/controlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/idname"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/regnev"
                        android:inputType="none|textPersonName"
                        android:paddingLeft="10dp"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextRegEmail"
                        style="@style/controlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/mail1"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/BelepesEmail"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="10dp"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextRegPassword"
                        style="@style/controlEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="5dp"
                        android:drawableStart="@drawable/password1"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/BelepesPw"
                        android:inputType="textPassword"
                        android:paddingLeft="10dp"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="20sp" />

                    <Switch
                        android:id="@+id/SwitchSzerzodes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/acceptText"
                        android:textColor="@color/cimsorTextB"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        app:cardBackgroundColor="@color/cimsorBar"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:contentPadding="5dp">

                        <Button
                            android:id="@+id/ButtonREG"
                            style="@style/controlButtonView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/cimsorBar"
                            android:drawableLeft="@drawable/reg1"
                            android:drawablePadding="20dp"
                            android:paddingLeft="5dp"
                            android:text="@string/regTitle"
                            android:textColor="@color/cimsorText"
                            android:textStyle="bold" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>